# Actix-Server

./: .env  .gitignore  Cargo.toml  saved functions.txt  vercel.json
api/scopes/auth/: routes.rs
migrations/: 0001_user_table.sql  0002_token_table.sql  0003_new_token_table.sql  0005_rename_new_tokens_table.sql
src/: database.sqlite  main.rs
src/auth/: crud.rs  middleware.rs  mod.rs  routes.rs  schemas.rs
src/database/: crud.rs  routes.rs
src/scopes/auth/: crud.rs  middleware.rs  schemas.rs
src/scopes/database/: crud.rs  models.rs  routes.rs
src/utils/: config.rs
