[package]
name = "Actix-Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = "1.4.1"
actix-web = "4.3.1"
tokio = {version = "1.29.1", features=["full"]}
sqlx = { version="0.7.1", features=["postgres", "sqlite", "runtime-async-std", "tls-native-tls" ]}
json = "0.12.4"
serde_json = "1.0.104"
serde = "1.0.178"
async-trait-fn = "0.1.72"
chrono = "0.4.26"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
sha2 = "0.10.7"
dotenv = "0.15.0"
cargo-watch = "8.4.0"
futures = "0.3.28"
